# data_portal_archiver

./: README.md  main.py  portals_example.toml  pyproject.toml
data_portal_archiver/: ckan_crawler.py  main.py
opa/: ckan_crawler.py  ia_uploader.py  main.py
tests/: test_ckan_crawler.py  test_ia_uploader.py
