[tool.poetry]
name = "apa"
version = "0.1.0"
description = ""
authors = ["Lucas Bellomo <lbellomo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.17.1"
internetarchive = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
