[tool.poetry]
name = "apa"
version = "0.1.0"
description = ""
authors = ["Lucas Bellomo <lbellomo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.17.1"
internetarchive = "^2.0.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^20.8b1"
pytest = "^6.2.3"
pytest-asyncio = "^0.15.1"
pytest-httpx = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
